<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_editMode"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:title="@string/Menu_editTable"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/Settings" />
    <item
        android:id="@+id/menu_editSubject"
        android:title="@string/Menu_editSubject" />
    <item
        android:id="@+id/menu_deleteSubject"
        android:title="@string/Menu_deleteSubject"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_aboutApp"
        android:title="@string/Menu_aboutApp"
        app:showAsAction="never" />
</menu>